refactor: 뉴스 서비스 코드 정리
- NewsTaggerService: 상수 선언 위치 상단으로 이동, STOCK_CODE_PATTERN static final 추가
- NewsCollectorService: FQCN 제거, StandardCharsets.UTF_8 사용

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>